2011-01-24  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* gfortran.dg/array_constructor_33.f90: Use dg-timeout-factor 4.

2011-01-21  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/47365
	* gcc.dg/torture/pr47365.c: New testcase.
	* gcc.dg/tree-ssa/pr47392.c: Likewise.

2011-01-21  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* g++.dg/other/anon5.C: Skip on mips-sgi-irix*.

2011-01-17  Eric Botcazou  <ebotcazou@adacore.com>

	Backport from mainline
	2010-11-22  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.dg/pr28796-2.c: SKIP on SPARC/Solaris 8.

	PR rtl-optimization/46603
	* gcc.dg/vect/slp-multitypes-2.c: XFAIL execution on SPARC 32-bit.

	2010-08-31  Bingfeng Mei  <bmei@broadcom.com>

	* gcc.dg/vect/pr43430-1.c: Requires vect_condition target.

2011-01-17  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* g++.old-deja/g++.other/init19.C: Don't XFAIL on mips-sgi-irix*.

2011-01-17  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2011-01-17  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/47318
	* gcc.target/i386/avx-vmaskmovpd-1.c: New.
	* gcc.target/i386/avx-vmaskmovpd-2.c: Likewise.
	* gcc.target/i386/avx-vmaskmovps-1.c: Likewise.
	* gcc.target/i386/avx-vmaskmovps-1.c: Likewise.

	* gcc.target/i386/avx-vmaskmovpd-256-1.c (avx_test): Load mask
	as __m256i.
	* gcc.target/i386/avx-vmaskmovpd-256-2.c (avx_test): Likewise.
	* gcc.target/i386/avx-vmaskmovps-256-1.c (avx_test): Likewise.
	* gcc.target/i386/avx-vmaskmovps-256-2.c (avx_test): Likewise.

2011-01-17  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	PR tree-optimization/47286
	* gcc.dg/tree-ssa/pr47286.c: New testcase.

	PR tree-optimization/44592
	* gfortran.dg/pr44592.f90: New testcase.

2011-01-16  Jakub Jelinek  <jakub@redhat.com>

	Backport from mainline
	2011-01-07  Jakub Jelinek  <jakub@redhat.com>

	PR target/47201
	* gcc.dg/pr47201.c: New test.

	2011-01-06  Jakub Jelinek  <jakub@redhat.com>

	PR c/47150
	* gcc.c-torture/compile/pr47150.c: New test.
