@@ -1,5 +1,7 @@
-! { dg-do run }
-! { dg-options "-fcray-pointer -fbounds-check" }
+! Using two spaces between dg-do and run is a hack to keep gfortran-dg-runtest
+! from cycling through optimization options for this expensive test.
+! { dg-do  run }
+! { dg-options "-O3 -fcray-pointer -fbounds-check" }
 ! { dg-timeout-factor 4 }
 ! Series of routines for testing a Cray pointer implementation
 program craytest
